<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PracticalTest01Var06MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/numar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:inputType="number"
                android:gravity="center"
                android:text="@string/numar1" />
            <CheckBox
                android:id="@+id/hold1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_gravity="center"
                android:text="@string/hold1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/numar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:inputType="number"
                android:gravity="center"
                android:text="@string/numar2" />
            <CheckBox
                android:id="@+id/hold2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_gravity="center"
                android:text="@string/hold2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/numar3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:inputType="number"
                android:gravity="center"
                android:text="@string/numar3" />
            <CheckBox
                android:id="@+id/hold3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_gravity="center"
                android:text="@string/hold3"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/play"/>

</LinearLayout>